/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.6.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

base {
    archivesName = 'agwcontrol'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava

    // KeePass 2.x .kdbx support
    implementation 'de.slackspace:openkeepass:0.8.2'

    // SLF4J-Binding: unterdrückt die "Failed to load StaticLoggerBinder"-Warnung
    runtimeOnly 'org.slf4j:slf4j-nop:1.7.36'

    // SQLite – lokale Datenbank (Single-File)
    implementation 'org.xerial:sqlite-jdbc:3.45.3.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(11)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'com.agwcontrol.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

// Fat JAR: Main-Class ins Manifest + alle Runtime-Dependencies einbetten
tasks.named('jar') {
    destinationDirectory = rootProject.layout.projectDirectory  // JAR direkt ins Projektroot
    manifest {
        attributes 'Main-Class': 'com.agwcontrol.App'
    }
    from {
        configurations.runtimeClasspath.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.register('deploy', Copy) {
    description = 'Baut das Projekt und kopiert die JAR nach OneDrive/Konzernhub-Upgrade'
    group = 'distribution'
    dependsOn build
    from rootProject.layout.projectDirectory.file('agwcontrol.jar')
    into '/Users/christianlintner/Library/CloudStorage/OneDrive-OEBB/Konzernhub-Upgrade/agwcontrol'
}
